# SBC-RunControl

./: .gitignore  .gitmodules  Functions.cpp  LICENSE  README.md  SQ.ino  TRIG.ino  conda_rc.yml  config.json  config.py  example_qprocess_stdout.py  fsin.ino  fsinSQ.ino  fsinTRIG.ino  gage_wrapper_example.py  init.sh  jsfsin.ino  level_meter_read.py  rc-ui.py  rc-uic.py  rc.py  rc_hardcode.py  rc_old.py  resources_rc.py  start_rc.sh  workers.py
clock/: README.md  clock.ino  clock_config.json
cpp/: README.md
cpp/include/SBCBinaryFormat/: Reader.hpp  Utilities.hpp  Writer.hpp
cpp/test/source/: basic_test.cpp
dependencies/: conda_rc.lock.yml  conda_rc.yml  root-init.sh
dependencies/ArduinoSketches/clock/: README.md  clock.ino  clock_config.json
dependencies/ArduinoSketches/ln2autofill_rtd/: ln2autofill_rtd.ino
dependencies/ArduinoSketches/ln2autofill_scale/: README.md  ln2autofill_scale.ino
dependencies/ArduinoSketches/position/: MgsModbus.h  position.ino  position_config.json
dependencies/ArduinoSketches/trigger/: trigger.ino  trigger_config.json
dependencies/ArduinoSketches/uti-docs/: README.md
dependencies/ArduinoSketches/uti-docs/docs/: Ethernet_Shield.txt
dependencies/NI_USB6501/: ni_usb_6501.py
dependencies/SBCBinaryFormat/: README.md
dependencies/SBCBinaryFormat/cpp/: CMakeLists.txt
dependencies/SBCBinaryFormat/cpp/test/: CMakeLists.txt
dependencies/SBCBinaryFormat/cpp/test/source/: main.cpp
dependencies/SBCBinaryFormat/python/: README.md
docs/: .readthedocs.yaml  api.rst  changelog.md  conf.py  data_format.md  data_structures.md  dependencies.md  documentation.md  git_workflow.md  index.md  program_behavior.md  project_description.md  project_structure.md  recon_data_format.md  usage.md
fsin/: fsin.ino
jsfsin/: config.json  jsfsin.ino
ln2autofill/: AMBC.Arduino.Valve.Control.ino
ln2autofill_rtd/: README.md  ln2autofill_rtd.ino
position/: position_config.json
python/: setup.py
python/examples/: writer_example.py
python/sbcbinaryformat/: files.py
resources/: resources.qrc
src/: acoustics.py  arduino.py  arduinos.py  caen.py  cameras.py  config.py  digiscope.py  global_variable.py  guardian.py  messaging.py  modbus.py  niusb.py  plc.py  red_caen.py  sbc_reader_dll_wrapper.py  sipm_amp.py  sql.py  time_lapse.py  ui_loader.py  visualization.py  workers.py  writer.py
trigger/: README.md  trigger.ino  trigger_config.json
ui/: custom_widgets.py  logwindow.py  logwindow.ui  mainwindow.py  mainwindow.ui  quitdialog.py  quitdialog.ui  settingswindow.py  settingswindow.ui  swappingtablewidget.py
uti-arduino-final/: Comments from S. Luitz.docx
uti-arduino-final/kicad-uti-arduino-022216-mega/: uti-arduino-1.dsn  uti-arduino-Edge.Cuts.gbr  uti-arduino.dsn  uti-arduino.kicad_pcb-bak  uti-arduino.pro
uti-docs/arduino-sketch/read-uti-v2/: MgsModbus.cpp  read-uti-v2.ino
uti-docs/arduino-sketch/read-uti-v2_1chip/: MgsModbus.cpp  MgsModbus.h  read-uti-v2_1chip.ino
uti-docs/kicad-uti-arduino-022216-mega/: serveruti-arduino.drl  uti-arduino-B.Cu.gbr  uti-arduino-F.Cu.gbr  uti-arduino.bak  uti-arduino.kicad_pcb  uti-arduino.rules  uti-arduino.sch  uti-arduino.ses
uti-docs/kicad-uti-arduino-022216-mega/gerbers/: uti-arduino-Edge.Cuts.gbr  uti-arduino-F.Cu.gbr  uti-arduino-NPTH.drl  uti-arduino.drl
(+4 files in other folders)
